# mydepot

./: README.md  a.out  bind.cpp  boost_split.cpp  cppCallShell  cppCallShell.cpp  createDir.cpp  file.cpp  file.txt  for_each.cpp  fork5child.cpp  fun_template.cpp  geo_nor.txt  geo_nor.xml  getMemory.cpp  ifstream.cpp  in.txt  isUnicode  isUnicode(无用).cpp  iterator.cpp  lambda.cpp  large_num_factorial.cpp  list.txt  listFiles.cpp  move.cpp  multiThread.cpp  nor.txt  normals.cpp  normals.txt  pstrList.cpp  ptr_ref.cpp  rdbuf.cpp  rdbuf_istreambuf_iterator.cpp  ref_array.cpp  remove  res.xml  shared_ptr.cpp  smartPtr.cpp  split.cpp  strstr.cpp  (+16 more)
Foo_cmake_project/: CMakeLists.txt  Foo.cpp  README.md
Foo_cmake_project/lib/cmake/Foo/: FooTargets-noconfig.cmake  FooTargets.cmake
bazel/foo/: BUILD  a_test.cc  b_test.cc  c_test.cc
c++11/: a.out  async.cpp  promise_future.cpp  thread.cpp
dlopen/: app  app.c  build.sh  dynlib.c  staticlib.c  staticlib.h
exec/: pro_father  pro_father.c  pro_sun  pro_sun.c
generic_algorithm/: a.out  hw_mac_test.cpp  pair_sort.cpp  remove_if_copy.cpp
getPath/: xx  xx.cpp
go/greetings/: greetings.go
go/hello/: go.mod  go.sum  hello.go
go/path/: go.mod  path.go
go/uds/: client.go  server.cpp
mini/: ShareMakefile.in  a.out  any.cpp  array_reference.cpp  atomic_bool_flag.cpp  atomic_bool_flag2.cpp  atomic_bool_flag3.cpp  atomic_flag.cpp  atomic_load_store.cpp  b.sh  before_after_main.cpp  bind_function.cpp  call_once.cpp  chicken_egg.cpp  class_make_unique_clone.cpp  condition_variable.cpp  const_member_initialize.cpp  constexpr.cpp  construct_binary_tree_traverse.cpp  copy_assign_restrain_move.cpp  decltype.cpp  derived_private_base_public_virtual_fun.cpp  detached_thread.cpp  drived_const_ref_structor.cpp  exec_on_order.cpp  filesystem_permission.cpp  future_promise.cpp  if_call_move_fun.cpp  init_in_if.cpp  l_r_value_callable_fun_suffix  lambda.cpp  lambda_recursive.cpp  libgtctimer.tgz  make_heap  make_heap.cpp  make_unique_array.cpp  map_extract_merge.cpp  multi_inheritance_virtual_function_table.cpp  nontype_parameter.cpp  nsp.cpp  (+31 more)
mini/WrapperDiag/: WrapperDiag.cpp  WrapperDiag.h  a.out  main.cpp
mini/cmake/hello/: CMakeLists.txt  hello.cpp
mini/cmake_public_private_interface/: CMakeLists.txt  main.cc
mini/cmake_public_private_interface/includeA/: a.h
mini/cmake_public_private_interface/includeB/: b.h
mini/cmake_public_private_interface/libA/: a.cc
mini/cmake_public_private_interface/libB/: b.cc
mini/cuda/: recv.cu  send.cu
mini/cv/: aa.cpp
mini/derived_access/: derived1.cpp  derived4.cpp  derived_twice.cpp
mini/extern_C/: a.out  cExample.c  cExample.h  cppFile.cpp
mini/forward_declaration/: b.cc  b.h
mini/function_bind/: bind_as_same_function.cpp  bind_param_reorder.cpp  function_wrapper_as_1fun.cpp
mini/function_wrapper_as_1fun/: function_wrapper_as_1fun.cpp
mini/smart_ptr/: CMakeLists.txt  main.cpp
mini/smart_ptr/src/: circular_ref.hpp  test.cpp  type_cov.hpp
mini/smart_ptr/test/: CMakeLists.txt  test_example.cpp
obj_convert2_directX/: main.cpp
python/: is_json_contains_key.py  test.python
shell/: dep_for_exe.sh  is_git_tag_existed.sh  oom.sh  path.sh  ping_all_active_ip.sh  trap.sh  update.sh
sqlite/: .up_del_sel.cpp.swp  2cto.cpp  a.out  batchinsert.cpp  bk_of.cpp  createTbl.cpp  del  demo.db  example.db  insert  insert.cpp  newsfeed.sql  of.cpp  of.db  ofSql.cpp  ofSql.h  saveblob.cpp  temp.cpp  temp.db  up_del_sel.cpp
(+91 files in other folders)
